--- a/rails_projects/todo/app/views/tasks/index.html.erb
+++ b/rails_projects/todo/app/views/tasks/index.html.erb
@@ -2,7 +2,7 @@
 <ul>
   <% @tasks.each do |task| %>
     <li>
-      <%= check_box_tag '', '' %>
+      <%= check_box_tag '', '' , task.done, {'data-id' => task.id} %>
       <%= task.title %>
       <%= link_to '[編集]', edit_task_path(task.id) %>
       <%= link_to '[削除]',
@@ -14,3 +14,11 @@
 </ul>
 
 <%= link_to('新規追加', new_task_path) %>
+
+<script>
+  $(function () {
+    $("input[type=checkbox]").click(function () {
+      $.post('/tasks/' + $(this).data('id') +'/toggle')
+    });
+  });
+</script>
